--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,18 @@ uuid = "3a97391d-bfb9-411c-b0e9-b32c43ed22e1"
 authors = ["Davide Ferracin <davide.ferracin@protonmail.com> and contributors"]
 version = "0.1.0"
 
+[weakdeps]
+ITensorMPS = "0d1a4710-d33b-49a5-8f18-73bdf49b47e2"
+ITensors = "9136182c-28ba-11e9-034c-db9fb085ebd5"
+LindbladVectorizedTensors = "6455c26f-8985-4381-925b-8a93509e9dbd"
+
+[extensions]
+ITensorMPSExt = ["ITensorMPS", "ITensors"]
+LindbladVectorizedTensorsExt = "LindbladVectorizedTensors"
+
 [compat]
-julia = "1.6.7"
+julia = "1.9"
+LindbladVectorizedTensors = ">= 0.16.1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
