--- a/Project.toml
+++ b/Project.toml
@@ -1,20 +1,20 @@
 name = "PauliStrings"
 uuid = "3a97391d-bfb9-411c-b0e9-b32c43ed22e1"
 authors = ["Davide Ferracin <davide.ferracin@protonmail.com> and contributors"]
-version = "0.1.1"
+version = "0.1.2"
 
 [deps]
+ITensorMPS = "0d1a4710-d33b-49a5-8f18-73bdf49b47e2"
 ITensors = "9136182c-28ba-11e9-034c-db9fb085ebd5"
 
 [weakdeps]
-ITensorMPS = "0d1a4710-d33b-49a5-8f18-73bdf49b47e2"
 LindbladVectorizedTensors = "6455c26f-8985-4381-925b-8a93509e9dbd"
 
 [extensions]
-ITensorMPSExt = "ITensorMPS"
 LindbladVectorizedTensorsExt = "LindbladVectorizedTensors"
 
 [compat]
+ITensorMPS = "0.3.2"
 ITensors = "0.7.7"
 LindbladVectorizedTensors = ">= 0.16.1"
 julia = "1.9"
